fixed no text wrap in firefox

--- a/src/scss/editor.scss
+++ b/src/scss/editor.scss
@@ -486,7 +486,7 @@ input[type=range].a-color-picker__hue::-ms-thumb {
   border: none;
   background: none;
   resize: none;
-  white-space: nowrap;
+  white-space: pre;
   width: auto;
   min-width: 30px;
   overflow: hidden;
